# Google-AI-mode

./: plan.md  querymind-phase-1-notes.md
querymind/: .env.example  .gitignore  README.md  main.py  pyproject.toml
querymind/adk/: __init__.py  callbacks.py  grounding.py  orchestrator.py
querymind/agents/: __init__.py  arbitrator.py  critic.py  planner.py  retriever.py  synthesizer.py
querymind/api/: server.py
querymind/core/: __init__.py
querymind/core/chains/: __init__.py  base_chains.py  parsers.py  prompts.py
querymind/core/memory/: __init__.py  session_store.py
querymind/core/tools/: __init__.py  document_store.py  web_search.py
querymind/graph/: __init__.py  checkpointer.py  state.py
querymind/graph/edges/: __init__.py
querymind/graph/nodes/: __init__.py
querymind/observability/: __init__.py  dashboard.py  tracer.py
querymind/tests/: conftest.py
querymind/tests/unit/: test_chains.py  test_document_store.py  test_web_search.py
