[project]
name = "querymind"
version = "0.1.0"
description = "Adaptive multi-agent search intelligence system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.136.1",
    "google-adk>=1.32.0",
    "langchain>=1.2.17",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.2",
    "langchain-google-genai>=4.2.2",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.1.10",
    "langsmith>=0.8.0",
    "opentelemetry-sdk>=1.41.1",
    "pydantic>=2.12.5",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
    "tavily-python>=0.7.24",
    "tenacity>=9.1.2",
    "uvicorn>=0.46.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
